# MysteryGiftInjector2

./: .gitignore  CMakeLists.txt  README.md  WONDERCARD_STRUCTURE.md  authenticwondercardwidget.cpp  documentation.html  editablewondercardwidget.cpp  editablewondercardwidget.h  fallbackgraphics.h  gbaromreader.cpp  mainwindow.cpp  resources.qrc  romdatabase.cpp  scriptdisassembler.cpp  scriptdisassembler.h  ticketmanager.h  ticketresource.cpp  wondercardrenderer.cpp
.github/workflows/: build.yml
Resources/: font_normal_copy_2_latin.json  font_short_copy_1_latin.json  gen3_rom_data.yaml  script_commands.yaml  script_data.yaml
Tickets/: README.md
src/core/: mysterygift.cpp  mysterygift.h  savefile.cpp  savefile.h
src/rendering/: fallbackgraphics.cpp  gen3fontrenderer.cpp  gen3fontrenderer.h  tileviewer.cpp  tileviewer.h  wondercardrenderer.h
src/rom/: gbaromreader.cpp  gbaromreader.h  romdatabase.h  romloader.cpp  romloader.h
src/tickets/: ticketmanager.cpp  ticketresource.h
src/ui/: authenticwondercardwidget.h  mainwindow.h
